file api now creates code run with script, config, and output object created and recorded in code_run